Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/NoClosedChar.ru
/? Error Léxico, no se cerró char, salida: char inválido
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 4 | COLUMNA 3 | ERROR EN LA DEFINICION DEL CARACTER: NO SE CERRO 'a
'a